--- a/Shared/VisualizerControl.xaml
+++ b/Shared/VisualizerControl.xaml
@@ -11,7 +11,7 @@
         <my1:NodeFontWeightConverter x:Key="NodeFontWeightConverter" />
         <my1:NonEmptyListConverter x:Key="NonEmptyListConverter" />
         <my1:InvertVisibilityConverter x:Key="InvertVisibilityConverter" />
-        <my1:HasValuesVisibilityConverter x:Key="HasValuesVisibilityConverter" />
+        <my1:NonNullVisibilityConverter x:Key="NonNullVisibilityConverter" />
 
         <Style TargetType="DataGrid">
             <Setter Property="IsReadOnly" Value="True" />
@@ -47,15 +47,10 @@
         </my1:ComboBoxTemplateSelector>
     </FrameworkElement.Resources>
 
-    <DockPanel DockPanel.Dock="Left" Height="{Binding ActualHeight,RelativeSource={RelativeSource AncestorType=DockPanel,AncestorLevel=1}}" Margin="0,0,12,0" VirtualizingStackPanel.VirtualizationMode="Standard">
+    <DockPanel DockPanel.Dock="Left" Height="{Binding ActualHeight,RelativeSource={RelativeSource AncestorType=DockPanel,AncestorLevel=1}}" Margin="0,0,12,0">
         <TextBlock Text="Tokens:" Style="{StaticResource LabelStyle}" />
         <Grid>
-            <DataGrid Name="tokens" ItemsSource="{Binding Tokens}" VirtualizingStackPanel.VirtualizationMode="Standard">
-                <DataGrid.Visibility>
-                    <MultiBinding Converter="{StaticResource HasValuesVisibilityConverter}">
-                        <Binding Path="Model.Config.SelectedLexerName" Mode="OneWay" />
-                    </MultiBinding>
-                </DataGrid.Visibility>
+            <DataGrid Name="tokens" ItemsSource="{Binding Tokens}" VirtualizingStackPanel.VirtualizationMode="Standard" Visibility="{Binding Tokens, Converter={StaticResource NonNullVisibilityConverter}}" EnableRowVirtualization="False">
                 <DataGrid.RowStyle>
                     <Style TargetType="DataGridRow">
                         <Setter Property="Foreground" Value="{Binding Model.IsError, Converter={StaticResource ErrorColorConverter},Mode=OneWay}" />
@@ -74,13 +69,13 @@
 
     <DockPanel DockPanel.Dock="Bottom" Margin="0,12,0,0">
         <TextBlock Text="Source:" Style="{StaticResource LabelStyle}" />
-        <TextBox x:Name="source" MinHeight="200" Text="{Binding Model.Source, Mode=OneTime}" IsReadOnly="True">
+        <my:BindableSelectionTextBox x:Name="source" Height="200" Text="{Binding Model.Source, Mode=OneTime}" IsReadOnly="True" BindableSelectionStart="{Binding SourceSelectionStart}" BindableSelectionLength="{Binding SourceSelectionLength}">
             <b:Interaction.Triggers>
                 <b:EventTrigger EventName="SelectionChanged">
                     <b:InvokeCommandAction Command="{Binding ChangeSelection}" CommandParameter="{Binding}" />
                 </b:EventTrigger>
             </b:Interaction.Triggers>
-        </TextBox>
+        </my:BindableSelectionTextBox>
     </DockPanel>
 
     <Grid DockPanel.Dock="Right" Margin="12,0,0,0">
@@ -90,13 +85,19 @@
                 <DataGrid.Columns>
                     <DataGridCheckBoxColumn Header="Custom" Binding="{Binding Custom, Mode=OneWay}" />
                     <DataGridTextColumn Header="Name" Binding="{Binding Key, Mode=OneWay}" />
-                    <DataGridTextColumn Header="Value" Binding="{Binding Value, TargetNullValue=null, Mode=OneWay}" >
+                    <DataGridTextColumn Header="Value" Binding="{Binding Value, TargetNullValue=null, Mode=OneWay}" MaxWidth="150" >
                         <DataGridTextColumn.CellStyle>
                             <Style TargetType="DataGridCell">
                                 <Setter Property="Foreground" Value="{Binding Value, Converter={StaticResource NullConverter}}" />
                                 <Setter Property="FontStyle" Value="{Binding Value, Converter={StaticResource NullConverter}}" />
+                                <Setter Property="ToolTip" Value="{Binding Value}" />
                             </Style>
                         </DataGridTextColumn.CellStyle>
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="TextTrimming" Value="CharacterEllipsis" />
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
@@ -224,14 +225,7 @@
 
     <TextBlock Text="Parse tree view:" Style="{StaticResource LabelStyle}" />
     <Grid>
-        <TreeView Name="treeview" ItemsSource="{Binding Root,Converter={StaticResource RootConverter}}" MinHeight="200" MinWidth="200">
-            <TreeView.Visibility>
-                <MultiBinding Converter="{StaticResource HasValuesVisibilityConverter}">
-                    <Binding Path="Model.Config.SelectedLexerName" />
-                    <Binding Path="Model.Config.SelectedParserName" />
-                    <Binding Path="Model.Config.ParseTokensWithRule" />
-                </MultiBinding>
-            </TreeView.Visibility>
+        <TreeView Name="treeview" ItemsSource="{Binding Root,Converter={StaticResource RootConverter}}" MinHeight="200" MinWidth="200" Visibility="{Binding Root, Converter={StaticResource NonNullVisibilityConverter}}">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children, Mode=OneTime}">
                     <TextBlock Text="{Binding Model.Caption}" FontWeight="{Binding Model.NodeType, Converter={StaticResource NodeFontWeightConverter}}">
