WindowTitle; fix source when scoped tree

--- a/Visualizer/VisualizerWindow.xaml
+++ b/Visualizer/VisualizerWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<my:VisualizerWindowBase x:Class="ParseTreeVisualizer.VisualizerWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:my="clr-namespace:ParseTreeVisualizer">
+    xmlns:my="clr-namespace:ParseTreeVisualizer"
+    Title="{Binding WindowTitle}">
   <my:VisualizerControl />
   <my:VisualizerWindowBase.OptionsPopup>
     <my:SettingsControl />
