--- a/UI/VisualizerControl.xaml
+++ b/UI/VisualizerControl.xaml
@@ -49,7 +49,7 @@
 
   <DockPanel DockPanel.Dock="Bottom" Margin="0,12,0,0">
     <TextBlock Text="Source:" Style="{StaticResource LabelStyle}" />
-    <util:BindableSelectionTextBox x:Name="source" Height="200" Text="{Binding Model.Source, Mode=OneTime}" IsReadOnly="True" BindableSelectionStart="{Binding SourceSelectionStart}" BindableSelectionLength="{Binding SourceSelectionLength}" TextWrapping="Wrap">
+    <util:BindableSelectionTextBox x:Name="source" Height="200" Text="{Binding Model.Source, Mode=OneTime}" IsReadOnly="True" BindableSelectionStart="{Binding SourceSelectionStart}" BindableSelectionLength="{Binding SourceSelectionLength}" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto">
       <b:Interaction.Triggers>
         <b:EventTrigger EventName="SelectionChanged">
           <b:InvokeCommandAction Command="{Binding ChangeSelection}" CommandParameter="{Binding}" />
